# Search-Engine

./: .gitignore  CMakeLists.txt  DSAVLTree.h  DSHashTable.h  DocumentInfo.cpp  DocumentInfo.h  README.md  invertIndex.cpp  invertIndex.h  main.cpp  parseDocument.cpp  parseDocument.h  searchQuery.cpp  searchQuery.h  stopwords.txt
rapidjson/: document.h  reader.h  writer.h
rapidjson/error/: error.h
util/: string_view.h
